CU :: feat(swagger configuration)
